#pragma once

#include <string>

namespace Cpp::Enum {
struct Enumerator
{
    std::string name;
};
} // namespace Cpp::Enum
