#pragma once

#include "Class.h"

namespace Cpp {

class MemberSorter
{
public:
    void sort(Class& c);
};

} // namespace Cpp
