#pragma once

#include "EndType.h"

namespace PlantUml {

class End
{
    EndType m_type;

};
} // namespace PlantUml
